<resources>
    <string name="app_name">Book Swap</string>

    <string name="Request_Title_textview">TextView</string>
    <string name="Request_Author_Textview">TextView</string>
    <string name="Request_Request_button">Request</string>
    <string name="Request_BookImage_imageview">Book image</string>

    <string name="button1">BOOK</string>
    <string name="button_a">Available</string>
    <string name="button_b">Accepted</string>
    <string name="button_c">Requested</string>
    <string name="button_d">Borrowed</string>
    <string name="search_hint">Find a book</string>

    <string name="AVAILABLE">Available</string>
    <string name="accepted">Accepted</string>


    <string name="confirm">Confirm</string>
    <string name="setLocation">Set Meetup Location</string>
    <string name="setLocationShort">Set Meetup</string>
    <string name="viewLocation">View Meetup</string>
    <string name="title_activity_map_view">MapViewActivity</string>

</resources>
