<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OwnerActivity"
   >


    <ImageButton
        android:id="@+id/available"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="120dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/book"
        android:onClick="GoToAvailable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/button_a" />

    <ImageButton
        android:id="@+id/accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="80dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:onClick="GoToBacceptActivity"
        android:src="@drawable/accept_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/available"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/button_b" />

    <ImageButton
        android:id="@+id/request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="54dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:onClick="GoToRequestActivity"
        android:src="@drawable/request_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/available"
        tools:text="@string/button_c" />

    <ImageButton
        android:id="@+id/borrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="80dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/borrowed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/request"
        app:layout_constraintTop_toBottomOf="@+id/accept"
        tools:text="@string/button_d" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="Available"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/available"
        app:layout_constraintStart_toStartOf="@+id/available"
        app:layout_constraintTop_toBottomOf="@+id/available" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:gravity="center_horizontal"
        android:layout_height="15dp"
        android:layout_marginTop="5dp"
        android:text="Accepted"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/accept"
        app:layout_constraintStart_toStartOf="@+id/accept"
        app:layout_constraintTop_toBottomOf="@+id/accept" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="Requested"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/request"
        app:layout_constraintStart_toStartOf="@+id/request"
        app:layout_constraintTop_toBottomOf="@+id/request" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:text="Borrowed"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/borrow"
        app:layout_constraintStart_toStartOf="@+id/borrow"
        app:layout_constraintTop_toBottomOf="@+id/borrow" />


</android.support.constraint.ConstraintLayout>

